# freeswitch

./: CHANGELOG.md  INSTALL-opusenc.sh
.github/workflows/: freeswitch.yml  fs.yaml
src/mod/applications/mod_fifo_extended/: Makefile.am  mod_fifo_extended.2017.vcxproj  mod_fifo_extended.c
src/mod/formats/mod_opusfile/: Makefile.am  mod_opusfile.c
src/mod/formats/mod_opusfile/test/: test_opusfile
